--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "psycopg (>=3.2.9,<4.0.0)",
     "psycopg2 (>=2.9.10,<3.0.0)",
     "redis (>=6.3.0,<7.0.0)",
-    "environs (>=14.3.0,<15.0.0)"
+    "environs (>=14.3.0,<15.0.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
 ]
 
 [tool.poetry]
