--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
-    "uvicorn (>=0.35.0,<0.36.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
@@ -19,7 +18,9 @@ dependencies = [
     "psycopg2 (>=2.9.10,<3.0.0)",
     "redis (>=6.3.0,<7.0.0)",
     "environs (>=14.3.0,<15.0.0)",
-    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 [tool.poetry]
