--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,26 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "greenlet (>=3.2.4,<4.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "packaging (>=25.0,<26.0)"
+    "packaging (>=25.0,<26.0)",
+    "pytest[async] (>=8.4.1,<9.0.0)",
+    "twisted (>=25.5.0,<26.0.0)",
+    "anyio (>=4.10.0,<5.0.0)",
+    "pytest-asyncio (>=1.1.0,<2.0.0)",
+    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
+    "pytest-trio (>=0.8.0,<0.9.0)",
+    "pytest-twisted (>=1.14.3,<2.0.0)",
+    "pytest-factoryboy (>=2.8.1,<3.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "flower (>=2.0.1,<3.0.0)",
+    "gevent (>=25.5.1,<26.0.0)",
+    "sqlalchemy-utils (>=0.41.2,<0.42.0)"
 ]
 
 [tool.poetry]
 packages = [{include = "pomodoro_poetry", from = "src"}]
 
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
