--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Birobizhan",email = "fedorovd2005@gmail.ru"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
@@ -37,7 +37,9 @@ dependencies = [
     "celery (>=5.5.3,<6.0.0)",
     "flower (>=2.0.1,<3.0.0)",
     "gevent (>=25.5.1,<26.0.0)",
-    "sqlalchemy-utils (>=0.41.2,<0.42.0)"
+    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
+    "aio-pika (>=9.5.7,<10.0.0)",
+    "aiokafka (>=0.12.0,<0.13.0)"
 ]
 
 [tool.poetry]
