Change project structure, return to celery + rabbitmq

--- a/.prod.env
+++ b/.prod.env
@@ -1,1 +1,21 @@
-GOOGLE_TOKEN_ID=PROD_TOKEN
+DB_URL=postgresql+asyncpg://postgres:example@db:5432/exampledb
+DB_PASSWORD=example
+DB_NAME=exampledb
+DB_USER=postgres
+JWT_SECRET_KEY=examplesecretkey
+JWT_ENCODE_ALGORITHM=HS256
+GOOGLE_SECRET_KEY=examplesecretkey
+GOOGLE_CLIENT_ID=exampleclientid
+GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google
+YANDEX_REDIRECT_URI=http://localhost:8000/auth/yandex
+YANDEX_CLIENT_ID=exampleclientid
+YANDEX_SECRET_KEY=examplesecretkey
+DB_TEST_URL=postgresql+asyncpg://postgres:example@db:5432/exampledbtest
+SMTP_PASSWORD=examplepassword
+from_email=example@example.com
+CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+POSTGRES_PASSWORD=example
+POSTGRES_USER=postgres
+POSTGRES_DB=exampledb
+DB_TEST_PORT=5432
+EXISTS_GOOGLE_USER_EMAIL=example@example.com
