--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "sqlalchemy (>=2.0.42,<3.0.0)",
     "alembic (>=1.16.4,<2.0.0)",
     "psycopg (>=3.2.9,<4.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
     "redis (>=6.3.0,<7.0.0)",
     "environs (>=14.3.0,<15.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
