--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ dependencies = [
     "aiokafka (>=0.12.0,<0.13.0)"
 ]
 
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+ruff = "^0.12.11"
 [tool.poetry]
 packages = [{include = "pomodoro_poetry", from = "src"}]
 
